--- a/scripts/README
+++ b/scripts/README
@@ -1,2 +1,16 @@
-# Installing
+#  Installing
 
+## Install JDK
+```
+    ./jdk.sh
+```
+
+## Install Zookeeper
+```
+    ./zk.sh
+```
+
+### Install Kafka
+```
+    ./kafka.sh
+```
